--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node": "^19.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
